--- a/Test/TestReconstruction/CMakeLists.txt
+++ b/Test/TestReconstruction/CMakeLists.txt
@@ -3,15 +3,21 @@
 ################################################################################
 gaudi_subdir(TestReconstruction v1r0)
 
-gaudi_depends_on_subdirs(GaudiAlg GaudiKernel FWCore Detector/DetInterface Detector/DetCommon Detector/DetSegmentation)
+#gaudi_depends_on_subdirs(GaudiAlg GaudiKernel FWCore Detector/DetInterface Detector/DetCommon Detector/DetSegmentation)
+gaudi_depends_on_subdirs(GaudiAlg GaudiKernel FWCore Detector/DetInterface Detector/DetCommon)
 find_package(Geant4)
 find_package(ACTS COMPONENTS Core)
+find_package(DD4hep COMPONENTS DDSegmentation)
+include(DD4hep)
+
 include(${Geant4_USE_FILE})
 
 gaudi_add_module(TestTestPlugins
                  src/*.cpp
-                 INCLUDE_DIRS FWCore DetInterface TrackingUtils Geant4 DetCommon DetSegmentation GaudiKernel ACTS::ACTSCore
-                 LINK_LIBRARIES GaudiAlgLib FWCore Geant4 TrackingUtils DetCommon DetSegmentation ACTS::ACTSCore)
+                 #INCLUDE_DIRS FWCore DetInterface TrackingUtils Geant4 DetCommon DetSegmentation GaudiKernel ACTS::ACTSCore
+                 INCLUDE_DIRS FWCore DetInterface TrackingUtils Geant4 DetCommon GaudiKernel ACTS::ACTSCore
+                 #LINK_LIBRARIES GaudiAlgLib FWCore Geant4 TrackingUtils DetCommon DetSegmentation ACTS::ACTSCore)
+                 LINK_LIBRARIES GaudiAlgLib FWCore Geant4 TrackingUtils DetCommon ACTS::ACTSCore ${DD4hep_COMPONENT_LIBRARIES})
 
 include(CTest)
 gaudi_add_test(LookForNeighbours
